--- a/orderApi/orderApi/orderApi.csproj
+++ b/orderApi/orderApi/orderApi.csproj
@@ -8,5 +8,9 @@
     <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
